# Algoritmisovellus

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/data_testi/: T_data_1.txt
data/musiikki/: musaa1.mid  uusi_kappale_A.mid  uusi_kappale_A_okt_2_til_2.mid  uusi_kappale_C.mid  uusi_kappale_C_tiloja_3_oktaavi_2.mid  uusi_kappale_G.mid  uusi_kappale_savellaji_A__Markov_ketjun_tiloja_2_kpl_oktaavi_3.mid  uusi_kappale_savellaji_A__Markov_ketjun_tiloja_4_kpl_oktaavi_3.mid  uusi_kappale_savellaji_A_yksitiedosto_Markov_ketjun_tiloja_1_kpl_oktaavi_3.mid  uusi_kappale_savellaji_C__Markov_ketjun_tiloja_3_kpl_oktaavi_3.mid  uusi_kappale_savellaji_C__Markov_ketjun_tiloja_5_kpl_oktaavi_3.mid  uusi_kappale_savellaji_G__Markov_ketjun_tiloja_1_kpl_oktaavi_3.mid  uusi_kappale_savellaji_G__Markov_ketjun_tiloja_4_kpl_oktaavi_3.mid  uusi_kappale_savellaji_G__Markov_ketjun_tiloja_5_kpl_oktaavi_3.mid
data/opetusdata/: a_testi_tiedosto.txt
data/tulosdata/: musaa.mid
dokumentaatio/: maarittelydokumentti.md  requirements.txt  testausluento.md  testiraportti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: .coverage  .coveragerc  main.py
src/entities/: trie_rakenne.py  trierakenne.py
src/services/: lue_opetusdata_midi.py  luo_opetusdata_abc.py  luo_uusi_kappale.py  opi_opetusdatasta.py  tee_uusi_midi_tiedosto.py
src/tests/: luo_midi_test.py  luo_opetusdata_test.py  opi_datasta_test.py  trie_rakenne_test.py  trie_rakenne_testi.py
(+64 files in other folders)
